{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 35,
  "lineage": "307f0405-3269-eeb8-276f-c95382048467",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/adaptive-load-balancer-2/global/networks/load-balancer-vpc",
            "mtu": 0,
            "name": "load-balancer-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "adaptive-load-balancer-2",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adaptive-load-balancer-2/global/networks/load-balancer-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "apac",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-08T07:23:30.720-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/adaptive-load-balancer-2/regions/asia-southeast1/subnetworks/subnet-apac",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "subnet-apac",
            "network": "https://www.googleapis.com/compute/v1/projects/adaptive-load-balancer-2/global/networks/load-balancer-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "adaptive-load-balancer-2",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.10.0.0/16",
                "range_name": "pods-range-apac"
              },
              {
                "ip_cidr_range": "10.20.0.0/20",
                "range_name": "services-range-apac"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/adaptive-load-balancer-2/regions/asia-southeast1/subnetworks/subnet-apac",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "eu",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-08T07:23:31.042-07:00",
            "gateway_address": "10.100.0.1",
            "id": "projects/adaptive-load-balancer-2/regions/europe-west1/subnetworks/subnet-eu",
            "ip_cidr_range": "10.100.0.0/16",
            "name": "subnet-eu",
            "network": "https://www.googleapis.com/compute/v1/projects/adaptive-load-balancer-2/global/networks/load-balancer-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "adaptive-load-balancer-2",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.110.0.0/16",
                "range_name": "pods-range-eu"
              },
              {
                "ip_cidr_range": "10.120.0.0/20",
                "range_name": "services-range-eu"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/adaptive-load-balancer-2/regions/europe-west1/subnetworks/subnet-eu",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "us",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-08T07:23:30.484-07:00",
            "gateway_address": "10.200.0.1",
            "id": "projects/adaptive-load-balancer-2/regions/us-central1/subnetworks/subnet-us",
            "ip_cidr_range": "10.200.0.0/16",
            "name": "subnet-us",
            "network": "https://www.googleapis.com/compute/v1/projects/adaptive-load-balancer-2/global/networks/load-balancer-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "adaptive-load-balancer-2",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.210.0.0/16",
                "range_name": "pods-range-us"
              },
              {
                "ip_cidr_range": "10.220.0.0/20",
                "range_name": "services-range-us"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/adaptive-load-balancer-2/regions/us-central1/subnetworks/subnet-us",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.gke_apac",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gke_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.gke_apac",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "intra_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke_apac",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke_apac",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shadow_allow_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke_apac",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shadow_allow_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke_apac",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shadow_allow_pods",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke_eu",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gke_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.gke_eu",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "intra_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke_eu",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke_eu",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shadow_allow_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke_eu",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shadow_allow_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke_eu",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shadow_allow_pods",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke_us",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gke_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.gke_us",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "intra_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke_us",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke_us",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shadow_allow_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke_us",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shadow_allow_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke_us",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shadow_allow_pods",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    }
  ]
}